Remove usage of Paths.get
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/invariant-store@38690 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c